--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,16 @@
 /* write your override styles here */
+
+
+#wall .tag-1 {
+  visibility: hidden;
+}
+
+#wall .tag-2 {
+  display: none;
+  visibility: hidden;
+}
+.tag-1 {
+  background: url(../images/tag-1.png) no-repeat;
+  z-index: 7;
+  display: block;
+}
