--- a/css/cleanup.css
+++ b/css/cleanup.css
@@ -1,1 +1,38 @@
-/* write your override styles here */
+/*This works as well
+
+#wall .tag-1 {
+  display: none;
+}
+div#wall #tag-2{
+    display: none;
+}
+body div#wall #tag-3.slick{
+    display: none;
+}
+body div.parent {
+    display: none;
+}
+
+*/
+
+#wall .tag-1 {
+  display: none;
+}
+div#wall #tag-2{
+    display: none;
+}
+body div#wall #tag-3.slick{
+    display: none;
+}
+#wall .parent #tag-4 {
+    display: none;
+}
+#wall .parent #tag-5.slick:only-child {
+    display:none
+}
+body div#wall div.parent div:last-child div#tag-6{
+    display:none
+}
+body div#wall div.parent div div#tag-7.slick{
+    display:none
+}
